--- a/content/resources/4-370f05-th.md
+++ b/content/resources/4-370f05-th.md
@@ -1,13 +1,15 @@
 ---
 content_type: resource
 description: New image Upload
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/4-370-interrogative-design-workshop-fall-2005/ad2892e10afdcd5003ca97b0aedb4b26_4-370f05-th.jpg
+file: /media/courses/4-370-interrogative-design-workshop-fall-2005/ad2892e10afdcd5003ca97b0aedb4b26_4-370f05-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Kate James' final project, the Utterlounge, is a chaise lounge designed
     with an attached sound conduit. (Image courtesy of Kate James.)
   credit: ''
   image-alt: The Utterlounge by Kate James.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: 4-370f05-th.jpg
 uid: ad2892e1-0afd-cd50-03ca-97b0aedb4b26
