--- a/content/resources/4-370f05-th.md
+++ b/content/resources/4-370f05-th.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: New image Upload
 file: /courses/4-370-interrogative-design-workshop-fall-2005/ad2892e10afdcd5003ca97b0aedb4b26_4-370f05-th.jpg
+file_size: 7236
 file_type: image/jpeg
 image_metadata:
   caption: Kate James' final project, the Utterlounge, is a chaise lounge designed
